[package]
name = "win32-nostd"
version = "0.1.0"
edition = "2024"
authors = ["Matt Gates <suhteevah@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std native Win32 API implementation — run Windows apps without Windows"
repository = "https://github.com/suhteevah/win32-nostd"
keywords = ["win32", "windows", "api", "no_std", "bare-metal"]
categories = ["no-std", "os"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }
spin = { version = "0.9", default-features = false }

